--- a/templates/module/index.html.twig
+++ b/templates/module/index.html.twig
@@ -1,9 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Liste des ModuleController!{% endblock %}
+{% block title %}Liste des Modules !{% endblock %}
 
 {% block body %}
 
-
+    {% for module in modules %}
+        {{ module }}<br>
+    {% endfor %}
 
 {% endblock %}
