--- a/templates/formation/index.html.twig
+++ b/templates/formation/index.html.twig
@@ -1,9 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Liste des FormationController!{% endblock %}
+{% block title %}Liste des Formations !{% endblock %}
 
 {% block body %}
 
-
+    {% for formation in formations %}
+        {{ formation }}<br>
+    {% endfor %}
 
 {% endblock %}
