--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -4,8 +4,8 @@
 
 {% block body %}
 
-        {% for admin in admins %}
-        {{ admin }}<br>
+        {% for ADMIN in ADMINS %}
+        {{ ADMIN }}<br>
     {% endfor %}
 
 {% endblock %}
