edit et add session ok

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,6 +27,7 @@
             </ul>
             </nav>
 
-        {% block body %}{% endblock %}
+        {% block body %}
+        {% endblock %}
     </body>
 </html>
