--- a/templates/session/add.html.twig
+++ b/templates/session/add.html.twig
@@ -1,26 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} Ajouter une Session {% endblock %}
+{% block title %}
+	Ajouter une Session
+{% endblock %}
 
 {% block body %}
+
+	<h1>
+		Ajouter une Session
+	</h1>
+
+	{{ form(formAddSession) }}
     
-    
-        {% if confition %}  
-            <h1> Editter une Session </h1>
-
-
-        {% else %}  
-            <h1> Ajouter une Session </h1>
-
-        {% endif %}
- 
- 
-        {% for session in sessions %}
-
-               <a href="{{ path( 'show_session', {'id: session.id}) }}" >{{ session }}</a><br>
-
-        {% endfor %}
-
-        {{ form(formAddSession) }}
-
-        {% endblock %}
+{% endblock %}
