form catégorie ok

--- a/templates/categorie/index.html.twig
+++ b/templates/categorie/index.html.twig
@@ -1,11 +1,29 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Liste des Categories !{% endblock %}
+{% block title %}Liste des categories !
+{% endblock %}
 
 {% block body %}
 
-    {% for categorie in categories %}
-        {{ categorie }}<br>
-    {% endfor %}
+	<h1>
+		Liste des categories
+	</h1>
+
+	<a class="btn btn-primary" href="{{ path( 'add_categorie') }}">Ajouter une categorie</a><br>
+
+
+	{% for categorie in categories %}
+
+		<a href="{{ path( 'show_categorie', {'id': categorie.id}) }}">{{ categorie }}</a><br>
+		<a class="btn-warning" href="{{ path( 'edit_categorie', {'id': categorie.id}) }}">
+			Edit
+		</a><br>
+		<a class="btn-danger" href="{{ path( 'delete_categorie', {'id': categorie.id}) }}">
+			Delete
+		</a><br>
+
+
+	{% endfor %}
+
 
 {% endblock %}
