--- a/templates/categorie/add.html.twig
+++ b/templates/categorie/add.html.twig
@@ -1,26 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} Ajouter une Catégorie {% endblock %}
+{% block title %}
+	Ajouter une Categorie
+{% endblock %}
 
 {% block body %}
+
+	<h1>
+		Ajouter une Categorie
+	</h1>
+
+	{{ form(formAddCategorie) }}
     
-    
-        {% if confition %}  
-            <h1> Editter une Catégorie </h1>
-
-
-        {% else %}  
-            <h1> Ajouter une Catégorie </h1>
-
-        {% endif %}
- 
- 
-        {% for categorie in categorie %}
-
-               <a href="{{ path( 'show_categorie', {'id': categorie.id}) }}" >{{ categorie }}</a><br>
-
-        {% endfor %}
-
-        {{ form(formAddCategorie) }}
-
-        {% endblock %}
+{% endblock %}
