--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,6 +26,13 @@
                 <li><a href="{{ path('app_stagiaire' ) }}  ">liste des stagiaires</a></li>
             </ul>
             </nav>
+        {% if app.user %}
+            <a href="{{ path('app_logout')}}">Déconnection</a>
+            <a href="{{ path('app_logout')}}">Mon profile</a>
+        {% else %}
+            <a href="{{ path('app_login') }}">Connection</a>
+            <a href="{{ path('app_register') }}">S'enregistrer</a>
+        {% endif %}
 
         {% block body %}
         {% endblock %}
